# Auto-Docs

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
autoapi_swagger/: __init__.py  constants.py  docs_generator.py  responses.py  urls.py  utils.py  views.py
tests/: README.md  conftest.py  settings.py  test_core.py  urls.py
